@@ -116,3 +116,9 @@ quad_to_square.pl
   Sample from Richard Fairhurst demonstrating the use of the transform2()
   det() function.  Transforms an arbitrary quadrilateral in the input into
   a square on the output.
+
+wiggle.pl
+
+  Produce an animated GIF that blends back and forth between the two
+  supplied images.  If the input images form a stereo pair the GIF can
+  be used for wiggle stereoscopy.
